@startuml
title: Worttrainer Reloaded

class WortEintrag {
  -wort : String
  -bildUrl : String
  --
  +WortEintrag(String wort, String bildUrl)
  +void setWort(String wort)
  +boolean checkWort(String wort)
  +void setBildUrl(String bildUrl)
  +boolean checkBildUrl(String bildUrl)
  +String getWort()
  +String getBildUrl()
  +String toString()
  +boolean equals(Object obj)
}

class WortTrainer {
  -eintraege : List<WortEintrag>
  -auswahl : WortEintrag
  -statistik : Statistik
  -pfad : String
  --
  +WortTrainer()
  +List<WortEintrag> getEintraege()
  +void setEintraege(List<WortEintrag> eintraege)
  +WortEintrag waehleZufaelligenEintrag()
  +WortEintrag waehleEintrag(int index)
  +void addEintrag(WortEintrag eintrag)
  +void removeEintrag(WortEintrag eintrag)
  +WortEintrag getAuswahl()
  +void setAuswahl(WortEintrag eintrag)
  +Statistik getStatistik()
  +void setPfad(String pfad)
  +String getPfad()
  +void speichereDaten()
  +void ladeDaten()
  +void loeschePersistenz()
}

class Statistik {
  -richtigeVersuche : int
  -falscheVersuche : int
  --
  +Statistik()
  +Statistik(int richtigeVersuche, int falscheVersuche)
  +int getRichtigeVersuche()
  +int getFalscheVersuche()
  +void aktualisiere(boolean korrekt)
  +String getStatistik()
}

class View {
  --
  +void zeigeNachricht(String nachricht)
  +String holeBenutzereingabe(String nachricht, ImageIcon icon)
  +void zeigeBild(String nachricht, ImageIcon icon)
}

class Controller {
  -wortTrainer : WortTrainer
  -view : View
  --
  +Controller(WortTrainer wortTrainer, View view)
  +void starte()
}

Controller "1" --> "1" WortTrainer
Controller "1" --> "1" View
WortTrainer "1" o-- "*" WortEintrag
WortTrainer "1" --> "1" Statistik

@enduml
